<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Police Tape</string>
    <string name="record_video">Record Audio</string>
    <string name="record_audio">Record Video</string>
    <string name="recording_saved">Recording saved</string>
    <string name="upload_recording_now">Would you like to upload your recording now?</string>
    <string name="yes_upload">Yes, upload now!</string>
    <string name="no_quit">No, just quit please</string>
    <string name="uploading_file">Uploading file!</string>
    <string name="title">Title</string>
    <string name="title_ex">The name of the event</string>
    <string name="pub">Public description</string>
    <string name="pub_ex">ex, footage of a private security officer assaulting a man at an airport, a judge taking a bribe</string>
    <string name="priv">Private description</string>
    <string name="priv_ex">Optional: Any notes for the us. Ex: Remove names, change voices, etc</string>
    <string name="email">Email</string>
    <string name="email_ex">Optional: An email address where the ACLU-NJ can contact you regarding this incident.</string>
    <string name="upload">Upload!</string>
    <string name="please_describe">Please describe your recording!\n</string>
    <string name="location_on">Location: On</string>
    <string name="location_off">Location: Off</string>
    <string name="settings">Settings</string>
    <string name="uploading">Uploading..</string>
    <string name="uploading_sub">This may take some time</string>
    <string name="upload_done">Upload finished!</string>
    <string name="open">Select File to Upload</string>
    <string name="tutorial">Tutorial</string>
    <string name="upload_or_play">Upload or Play?</string>
    <string name="play">Play</string>
    <string name="about_text">Police Tape is part of OpenWatch, a participatory citizen media project aiming to provide documentary evidence of uses and abuses of power.\n\

				Until now, surveillance technology has only been in the hands of those who are already in power, which means it cannot be used to combat the largest problem facing modern society: abuse of power.\n\n
				So the question remains: Who watches the watchers? \n\n
				This is where OpenWatch comes in. Now, we are all opportunistic journalists. Whenever any of us come in contact with power being used or abused, we can capture it and make it become part of the public record. If we seek truth and justice, we will be able to appeal to documentary evidence, not just our word against theirs. Ideally, this will mean less corruption, more open government and a more transparent society.\n\n
				OpenWatch is not only intended to display abuse of power, but also to highlight appropriate use. As we are unbound by technological restrictions, we can aim to record every single time power is applied so that we may analyze global trends and provide a record for future historians.\n\n
				Police, corporate executives, judges, lawyers, private security agents, lobbyists, bankers, principals and politicians: be mindful! We are watching! \n\n\nOpenWatch is Free and Open Source Software. More information is available at OpenWatch.net\n\n\n</string>
    <string name="tutorial_text">Welcome, new Watcher!\n\n Whenever you think you are about to interact with an authority figure or a person in a position of power, start OpenWatch and either press Record Audio or Record Video. \n\nIf you record audio, the application will appear to close, although audio is still being recorded. When the encounter is over, reopen the application and it will stop the recording and prompt you for a description for the upload. For best audio quality, put the phone in your front shirt pocket, or on a nearby table with the microphone facing upwards.\n\n
    							 If you are recording video, the screen will simply turn black, as if the phone were off. To stop the recording, press the back button three times, which will then stop the recording and prompt you to upload. To avoid suspicion while filming, simply pretend to be making a phone call.\n\n
    							 When uploading, please describe the incident. It will be reviewed by the editors and quickly published to OpenWatch.net. If you request, we will remove all of the personally identifiable information we can. No logs are kept on the server.\n\nAll uploads are released under the Creative-Commons-Attribution license.\n\nCourage is contagious!\n\n\n</string>
	<string name="menu_new_folder">New Folder</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_send">Send</string>
    <string name="menu_open">Open</string>
    <string name="menu_move">Move</string>
    <string name="menu_copy">Copy</string>
    <string name="faq">FAQ</string>
    <string name="about">About</string>
    <string name="disclaimer">Information that is recorded and submitted via the ACLU-NJ Police Tape may be posted on the OpenWatch.net website and submitted to the ACLU-NJ for their use in advocating for better, more accountable police practices. DO NOT submit recordings that you do not wish to expose to public view. If you believe that a recording contains information that may subject you to criminal or civil liability or undermine your ability to pursue legal remedies, you may wish to consult an attorney prior to submitting your recording.</string>
    <string name="contactACLU">Contact ACLU-NJ</string>
    <string name="EULA">
        The American Civil Liberties Union of New Jersey (“ACLU-NJ”) is a private, non-profit 
organization devoted to defending the principles of freedom, justice and equality outlined 
in the Bill of Rights of the United States Constitution. 
The ACLU-NJ has worked diligently to protect citizens’ First Amendment rights and to 
ensure police accountability.  Recording police officers while they perform their public 
duties fits squarely within both areas.  We are therefore proud, in conjunction with 
OpenWatch.net, to provide this ACLU-NJ Police Tape App (“the App”). 
The ACLU-NJ believes that citizens enjoy the right to film police officers as they 
perform their duties in public spaces.  That right is not without limits.  The right to tape is 
limited by the right of public access.  In other words, a person cannot record from areas 
where the police can legitimately exclude him (within a line of police tape, for example).  
In some situations, resisting commands  made by law enforcement, even unlawful 
commands, can lead to an arrest or otherwise expose a person to criminal liability.   
While the ACLU-NJ believes that the United States and the New Jersey Constitutions 
protect the right to film or record officers in public, some states take a contrary view.  For 
that reason, the ACLU-NJ Police Accountability App is designed for use only in New 
Jersey.  Before you use the App in another state or jurisdiction, please consult applicable 
laws and court decisions. 
Information that is recorded and submitted via the App will be posted on the 
OpenWatch.net’s publically available website and will also be submitted to the ACLUNJ for their use in advocating for better, more accountable police practices.  DO NOT 
submit recordings that you do not wish to expose to public view.  If you believe the 
recording contains information that may subject you to criminal or civil liability or 
undermine your ability to pursue legal remedies, you may wish to consult an attorney 
prior to submitting your recording. 
I agree that I am responsible for any recordings that I make using the App.  Neither the 
ACLU-NJ nor OpenWatch.net is responsible if my recording breaks any laws, subjects 
me to civil liability, or affects my ability to pursue legal remedies. 
Information that is recorded and submitted via the ACLU-NJ Police Tape App will be 
posted on the OpenWatch.net website and submitted to the ACLU-NJ for their use in 
advocating for better, more accountable police practices.  DO NOT submitted recordings 
that you do not wish to expose to public view.  If you believe that a recording contains 
information that may subject you to criminal or civil liability or undermine your ability to 
pursue legal remedies, you may wish to consult an attorney  prior to submitting your 
recording.
    </string>
    <string name="aboutaclu">
        The ACLU is the premier guardian of liberty and the U.S. Constitution, working to defend our rights in courts, legislatures and communities. Founded in 1920, the non-partisan organization has affiliates in all 50 states, including New Jersey and works to extend rights to segments of our population that have traditionally been denied their rights. For more information about our work, visit www.aclu-nj.org.
    </string>
    <string name="bulletListTest">
        <![CDATA[
        <ol><li>item 1\n</li><li>item 2\n</li></ol>
        <p>Think carefully about your words, movement, body language, and emotions</p>
        <p>Don’t get into an argument with the police. </p>
		]]>
	</string>
    <string-array name="car_rights">
        <item>
            If You\'re Stopped In Your Car
        </item>
        <item>  
	        Upon request, show them your driver’s license, registration, and proof of insurance. In certain cases, your car 
			can be searched without a warrant as long as the police 
			have probable cause. To protect yourself later, you
			should make it clear that you do not consent to a search. 
			It is not lawful for police to arrest you simply for refusing 
			to consent to a search.
		</item>
		<item>
		    If you’re given a ticket, you should sign it; otherwise 
			you can be arrested. You can always fight the case in 
			court later.
		</item>
		<item>
		    If you’re suspected of drunk driving (DWI) and refuse 
			to take a blood, urine or breath test, your driver’s license 
			may be suspended. 
		</item>
        
    </string-array>
    <string-array name="home_rights">
        <item>
            If Police Come to Your Home
        </item>
        <item>
            If the police knock and ask to enter your home, you
			don’t have to admit them unless they have a warrant
			signed by a judge.
		</item>
		<item>
		    However, in some emergency situations (like when a 
			person is screaming for help inside, or when the police 
			are chasing someone) officers are allowed to enter and 
			search your home without a warrant. 
		</item>
		<item>
		    If you are arrested, the police can search you and the 
			area close by. If you are in a building, “close by” usually 
			means just the room you are in. 
		</item>
    </string-array>
</resources>