<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

     <ImageView
   		android:id="@+id/stripey"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:layout_marginTop="-5dp"
	    android:src="@drawable/stripey" />

<ScrollView
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:padding="4dip" >

	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="45dip"
	        android:orientation="horizontal"
	        android:padding="0dip" >

	        <ImageView
	                android:id="@+id/aclu"
	                android:layout_width="100dp"
	                android:layout_height="wrap_content"
	                android:layout_alignParentLeft="true"
	                android:layout_alignParentTop="true"
	                android:src="@drawable/aclu_logo_small" />

	        <Button
	            android:id="@+id/locationButton"
	            android:layout_width="50dip"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_weight=".33"
	            android:background="@drawable/switch_left_unpressed_small"
	            android:padding="4dip"
	            android:textAppearance="?android:attr/textAppearanceMedium" >
	        </Button>

	        <TextView
	            android:id="@+id/location_text"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_alignParentBottom="true"
	            android:layout_alignRight="@+id/locationButton"
	            android:layout_below="@+id/locationButton"
	            android:gravity="right"
	            android:padding="0dip"
	            android:textSize="12dp"
	            android:text="@string/location_on"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:textColor="#000000" />

	        <RelativeLayout
	            android:layout_width="150dp"
	            android:layout_height="fill_parent"
	            android:layout_toRightOf="@+id/aclu"
	            android:layout_alignParentTop="true"
	            android:gravity="center_horizontal"
	            android:orientation="vertical"
	            android:paddingLeft="5dp"
	            android:paddingRight="5dp" >

	            <TextView
	                android:id="@+id/PoliceTape"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_centerHorizontal="true"
	                android:layout_marginTop="1dp"
	                android:gravity="center_horizontal"
	                android:text="POLICE TAPE"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:textColor="#000000"
	                android:background="#FFD000"
	                android:textSize="16dp"
	                android:textStyle="bold" />

	            <TextView
	                android:id="@+id/PoliceTapeTag"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_below="@+id/PoliceTape"
	                android:layout_centerHorizontal="true"
	                android:text="Powered by OpenWatch"
	                android:gravity="center_horizontal"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:textColor="#000000"
	                android:textSize="12dp"
	                android:textStyle="italic" />
	        </RelativeLayout>

	    </RelativeLayout>

	    <TextView
	        android:id="@+id/carrier"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/please_describe"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="#1a5a91" />

	    <TextView
	        android:id="@+id/num_desc"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="-20dp"
	        android:padding="3dip"
	        android:text="@string/title"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="#000000" />

	    <EditText
	        android:id="@+id/title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/title_ex"
	        android:minLines="1" >
	    </EditText>

	    <TextView
	        android:id="@+id/profile_desc"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:padding="3dip"
	        android:text="@string/pub"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="#000000" />

	    <EditText
	        android:id="@+id/pub_desc"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/pub_ex"
	        android:minLines="3" >
	    </EditText>

	    <TextView
	        android:id="@+id/num_desc"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:padding="3dip"
	        android:text="@string/priv"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="#000000" />

	    <EditText
	        android:id="@+id/priv_desc"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:hint="@string/priv_ex"
	        android:minLines="1" >
	    </EditText>

	    <Button
	        android:id="@+id/thebutton"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/button"
	        android:padding="4dip"
	        android:text="@string/upload"
	        android:textAppearance="?android:attr/textAppearanceMedium" >
	    </Button>

	    <ProgressBar
	        android:id="@+id/progressbar"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:padding="15dip"
	        android:visibility="gone" >
	    </ProgressBar>

	    <TextView
	        android:id="@+id/loadingtext"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:padding="7dip"
	        android:text=""
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="#000000"
	        android:visibility="gone" />
	</LinearLayout>

</ScrollView>

</LinearLayout>
